deployments/moodtrackerapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodtrackerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodtrackerapi
  template:
    metadata:
      labels:
        app: moodtrackerapi
    spec:
      containers:
        - name: moodtrackerapi
          image: moodtrackerapi:latest
          ports:
            - containerPort: 80
