deployments/moodtrackerapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodtrackerapi
spec:
  type: NodePort
  selector:
    app: moodtrackerapi
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
